# 3DcharacterAdmiring

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY_SETUP.md  index.html  login.html  option.html  package-lock.json  pyproject.toml  register.html  start_dev.bat  start_dev.sh  要件定義書.md
app/: main.py
app/api/routes/: interact.py
app/core/: animation_mapper.py  config.py  security.py
app/models/: schemas.py
app/services/: assemblyai_service.py  elevenlabs_service.py  gemini_service.py
assets/: avatar.glb
cors-proxy/: .env.example  package-lock.json  package.json  server.js  start-proxy.bat
css/: reset.css  style.css  voice-controls.css
document/: CodeCharter.md  code_agent_description (1).markdown  code_charter (1).markdown  prompt.md  requirements_specification (1).markdown  requirements_specification.md
frontend/: .env.example  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: CharacterScene.js  InputControls.js  MessageDisplay.js  ProtectedRoute.js
frontend/src/pages/: ChatPage.js  LoginPage.js
frontend/src/services/: api.service.js  audio-recorder.service.js
frontend/src/store/: store.js
functions/api/proxy/: gemini.js
js/: auth.js  config.js  config.secure.js  gemini-api.js  main.js  motion-controller.js  nijivoice.js  secure-api-client.js  ui-controller.js  voice-manager.js  voicevox.js  vrm-loader.js  web-speech-fallback.js
models/mosion/: Idle.fbx
src/mcp/backend/: .env.template  main.py  requirements.txt
(+20 files in other folders)
